# udacity_de_project_03_cloud_data_warehouses

./: README.md  create_cluster.py  create_tables.py  delete_cluster.py  etl.py  example_dwh.cfg  pyproject.toml  sql_queries.py
