[tool.poetry]
name = "udacity-de-project-03-cloud-data-warehouses"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "udacity_de_project_03_cloud_data_warehouses"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
psycopg2-binary = "^2.9.4"
boto3 = "^1.24.91"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
